--- a/cfg/environment/marius_hills_original.yaml
+++ b/cfg/environment/marius_hills_original.yaml
@@ -2,7 +2,7 @@
 
 name: LargeScale # Keep this as LargeScale as it defines the environment type
 seed: 42 # You can change this seed if you want a different procedural generation overlay
-physics_dt: 0.0166 #0.01666 # 60 Hz #actually can change also in default_physics.yaml
+physics_dt: 0.0166 #0.01666 # 
 rendering_dt: 0.0333 #0.0333 # 30 Hz
 enforce_realtime: true #if true uses the physics_dt
 
@@ -14,29 +14,28 @@ enforce_realtime: true #if true uses the physics_dt
 large_scale_terrain:
   #lr_dem_folder_path: "assets/Terrains/MariusHills4m" # DEM with nan in pit
   #lr_dem_folder_path: "assets/Terrains/MariusHills_pit_40m_depth_gradual" # DEM with 40m bottom going in step of 20m down
-  lr_dem_folder_path: "assets/Terrains/MariusHills_pit_40m_depth_gradual_slow" # DEM with 40m bottom going in step of 10m down
+  #lr_dem_folder_path: "assets/Terrains/MariusHills_pit_40m_depth_gradual_slow" # DEM with 40m bottom going in step of 10m down
   #lr_dem_folder_path: "assets/Terrains/MariusHills_nan_set_-1620_all" # DEM where set all nan to -1620, which is roughly 40m below edge
+  lr_dem_folder_path: "assets/Terrains/MH_-1620_up_8x_bilinear_loc_bicubic_glob"
   lr_dem_name: "DM1" # The subolfder name of the DEM folder
   block_size: 20 # 20 works for no padding, 40 also 80 also but takes long. 
 
-
   #started to change the settings for the large scale terrain, default values see environments.py
-  geo_cm_coarse_interpolation_method: "bilinear" 
+  geo_cm_coarse_interpolation_method: "bicubic" 
   geo_cm_target_res: 0.02 #0.02
   hr_dem_resolution: 0.025 #0.025
-  geo_cm_fine_interpolation_method: "bilinear"
+  geo_cm_fine_interpolation_method: "bicubic"
   hr_dem_num_blocks: 4 #block_span for the rocks below needs to lower than this
-  #somehow does only bicubic exist with PIL
-  hrdem_interpolation_method: "linear" 
-  hrdem_interpolator_name: "cv2"
+  hrdem_interpolation_method: "bicubic" #"linear" 
+  hrdem_interpolator_name: "PIL" #"cv2"
   
   num_workers_craters: 12
   num_workers_interpolation: 4
 
 
   #starting poisition need to be multiple of block size
-  #starting_position: [480, -660] #is near pit for block size 20
-  starting_position: [480,-580] #is near pit edge for block size 20
+  starting_position: [480, -660] #is near pit for block size 20
+  #starting_position: [480,-580] #is near pit edge for block size 20
   #starting_position: [260,-700] #is near landing zone for block size 20
   #starting_position: [500,-520] #is in pit for block size 40
   #starting_position: [440,-560] #is near pit for block size 40
@@ -156,11 +155,12 @@ stellar_engine_settings:
 # Sun settings (copy as is)
 sun_settings:
   intensity: 1750.0 #need to tune
-  angle: 0.53 #should be tuned already
+  angle: 0.53 #is actually value as seen from earth
   diffuse_multiplier: 1.0
   specular_multiplier: 1.0
   color: [1.0, 1.0, 1.0]
-  temperature: 6500.0 #effective according to NASA 5772K
+  temperature: 5900.0 #effective according to NASA 5772K, was 6500K, problem is this is the blackbody and 6500 is for earth standard sun light
+  #5900 from wikipedia but source no longer available
   azimuth: 180.0
   elevation: 45.0
 
