--- a/cfg/environment/lunalab.yaml
+++ b/cfg/environment/lunalab.yaml
@@ -162,10 +162,10 @@ robots_settings:
     -
       #robot_name: husky
       #usd_path: assets/USD_Assets/robots/ros2_husky_PhysX_vlp16.usd
-      robot_name: jackal
-      usd_path: assets/USD_Assets/robots/ros2_jackal_PhysX_vlp16_stereo.usd
-      #robot_name: LL
-      #usd_path: assets/USD_Assets/robots/lunar_leaper_4cams_2ROS_dimensions_adapted_150mm_clearance_mass12_7_wider_wheels_further_back_removed_lidar_removed_exisitng_stereo_cam__physics_material_solar_gpr_v8.usd
+      #robot_name: jackal
+      #usd_path: assets/USD_Assets/robots/ros2_jackal_PhysX_vlp16_stereo.usd
+      robot_name: LL
+      usd_path: assets/USD_Assets/robots/LL_v15.usd
       #usd_path: assets/USD_Assets/robots/lunar_leaper_4cams_ROS_bare_visuals_camera_adapted_working.usd
       pose:
         position: [5.0, 5.0, 1]
