--- a/omnilrs.docker/Dockerfile
+++ b/omnilrs.docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM nvcr.io/nvidia/isaac-sim:2023.1.1
 #FROM nvcr.io/nvidia/isaac-sim:4.5.0
 
-RUN /isaac-sim/python.sh -m pip install opencv-python omegaconf hydra-core
+RUN /isaac-sim/python.sh -m pip install opencv-python omegaconf hydra-core --upgrade pyyaml
 
 # setup timezone
 RUN echo 'Etc/UTC' > /etc/timezone && \
